--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "underscore": "1.3.3"
   },
   "devDependencies": {
+    "optimist": "0.3.5",
+    "snockets": "1.3.8",
     "uglify-js": "1.3.2",
-    "vows": "0.6.3"
+    "vows": "0.7.0"
   },
   "scripts": {
     "test": "./node_modules/vows/bin/vows"
