--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "uglify-js": "1.3.2",
     "vows": "0.7.0"
   },
+	"optionalDependencies": {
+		"tf.bench": "git+ssh://git@github.com:trifacta/tf-bench.git"
+	},
   "scripts": {
     "test": "./node_modules/vows/bin/vows"
   }
