--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
   },
   "main": "index.js",
   "dependencies": {
-    "underscore": "1.3.3"
+    "underscore": "1.3.3",
+    "microee": "0.0.2"
   },
   "devDependencies": {
-		"temp": "0.5.0",
+    "temp": "0.5.0",
     "uglify-js": "1.3.2",
-    "vows": "0.7.0"
+    "vows": "0.7.0",
+    "gluejs": "~2.x"
   },
   "scripts": {
     "test": "./node_modules/vows/bin/vows"
