--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
   "main": "index.js",
   "dependencies": {
     "underscore": "1.3.3",
-    "microee": "0.0.2"
+    "microee": "0.0.2",
+    "gluejs": "~2.x"
   },
   "devDependencies": {
     "temp": "0.5.0",
     "uglify-js": "1.3.2",
-    "vows": "0.7.0",
-    "gluejs": "~2.x"
+    "vows": "0.7.0"
   },
   "scripts": {
     "test": "./node_modules/vows/bin/vows"
