--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "devDependencies": {
     "temp": "0.5.0",
     "uglify-js": "1.3.2",
-    "vows": "0.7.0"
+    "vows": "0.7.0",
+    "minilog": "~2.0.0"
   },
   "scripts": {
     "test": "./node_modules/vows/bin/vows"
